[package]
name = "track2line"
version = "0.11.0"
edition = "2024"

[dependencies]
track2line_lib = { git = "https://github.com/Uliboooo/track2line_lib", tag = "v0.9.3", features = [
    "config",
] }
get_input = { git = "https://github.com/Uliboooo/get_input", tag = "0.5.1" }
clap = { version = "4.5.31", features = ["derive"] }
