[package]
name = "track2line"
version = "0.12.3"
edition = "2024"

[profile.release]
opt-level = "z"

[dependencies]
track2line_lib = { git = "https://github.com/Uliboooo/track2line_lib", tag = "v0.10.0", features = [
    "config",
] }
get_input = { git = "https://github.com/Uliboooo/get_input", tag = "0.5.1" }
clap = { version = "4.5.31", features = ["derive"] }
